--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   pokemon_api:
     path: packages/pokemon_api
   flutter_bloc: ^8.0.1
+  carousel_slider: ^4.1.1
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
