--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_bloc: ^8.0.1
   carousel_slider: ^4.1.1
   photo_view: ^0.14.0
+  percent_indicator: ^4.2.2
 
 dev_dependencies:
   flutter_test:
