--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,16 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.10.0
 
 flutter:
   uses-material-design: true
   assets:
     - assets/
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path_android: 'assets/playstore.png'
+  image_path_ios: 'assets/appstore.png'
 
