--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   carousel_slider: ^4.1.1
   photo_view: ^0.14.0
   percent_indicator: ^4.2.2
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
